[paper] Add bibitems

--- a/final paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/final paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -441,8 +441,6 @@
 % in the abstract or keywords.
 \begin{abstract}
 In real world, the actual network infrastructure can be dynamic. With the help of network virtualization, we are able to performan remote sensing task regardless of physicial network changes. For a given network, if we tried to perform any task, the first crucial step is be able to spread the task requirement in the network in an effecient manner. In short, task message need to be broadcasted quickly. In this paper, we used ns-3 to implement gossip protocol.  
-
-The abstract goes here.
 \end{abstract}
 
 % Note that keywords are not normally used for peerreview papers.
@@ -484,22 +482,16 @@ IEEEtran, journal, \LaTeX, paper, template.
 % Here we have the typical use of a "T" for an initial drop letter
 % and "HIS" in caps to complete the first word.
 \IEEEPARstart
-Smartphone, smartwatch, and smart thermostats could form a network in which these devices could communicate with each other. If these devices are connected to the Internet, we call it the “Internet of Things.” There is no doubt that IoT is an innovative paradigm [1] because this idea combined the Internet with our everyday gadgets. Either from the perspective of private user or from the perspective of business user, there are infinite possible ways to exploit IoT. As of today, research in the area of IoT is emerging rapidly and many open questions remain to be answered.
+{S}{martphone}, smartwatch, and smart thermostats could form a network in which these devices could communicate with each other. If these devices are connected to the Internet, we call it the \textit{Internet of Things}. There is no doubt that IoT is an innovative paradigm \cite{Atzori} because this idea combined the Internet with our everyday gadgets. Either from the perspective of private user or from the perspective of business user, there are infinite possible ways to exploit IoT. As of today, research in the area of IoT is emerging rapidly and many open questions remain to be answered.
 
 Remote sensing is one of the possible services of IoT. Remote sensing involves the search and selection of IoT devices to form a virtual sensor network. Subsequently, the selected devices estimate the wanted property collaboratively and report the result to the remote cloud agent. IoT assigns a unique MAC address to physical object which do not have an identification, so people could track the specific object’s status and control it remotely. The advantage of remote control is that it requires less manpower needed to monitor and manage the object. And it could further increase devices usage rate.
-However, the main challenge here is that IoT devices are often resource limited meaning they have limited bandwidth and power, and restricted by their mobility. Due to the characteristics of IoT devices, topology of physical network formed from IoT is dynamic. The distributed network protocol which virtualizing the physical network has to deal with this dynamic nature of IoT networks.
-Therefore, it is important to evaluate the distributed network protocol’s performance under various power models and different MAC protocols in ns-3.
 
-{T}{his} demo file is intended to serve as a ``starter file''
-for IEEE journal papers produced under \LaTeX\ using
-IEEEtran.cls version 1.8a and later.
+However, the main challenge here is that IoT devices are often resource limited meaning they have limited bandwidth and power, and restricted by their mobility. Due to the characteristics of IoT devices, topology of physical network formed from IoT is dynamic. The distributed network protocol which virtualizing the physical network has to deal with this dynamic nature of IoT networks.
+
+Therefore, it is important to evaluate the distributed network protocol's performance under various power models and different MAC protocols in ns-3.
+
 % You must have at least 2 lines in the paragraph with the drop letter
 % (should never be an issue)
-I wish you the best of success.
-
-\hfill mds
- 
-\hfill September 17, 2014
 
 \subsection{Subsection Heading Here}
 Subsection text here.
@@ -706,15 +698,25 @@ The authors would like to thank...
 % (used to reserve space for the reference number labels box)
 \begin{thebibliography}{1}
 
-%[1] Luigi Atzori, Antonio Iera, Giacomo Morabito, The Internet of Things: A survey, Computer Networks, Volume 54, Issue 15, 28 October 2010, Pages 2787-2805, ISSN 1389-1286,
-%[2] Jayasumana, Anura P., Qi Han, and Tissa H. Illangasekare. "Virtual sensor networks-A resource efficient approach for concurrent applications." Information Technology, 2007. ITNG'07. Fourth International Conference on. IEEE, 2007.
-%[3] Chowdhury, NM Mosharaf Kabir, and Raouf Boutaba. "A survey of network virtualization." Computer Networks 54.5 (2010): 862-876.
-%[4] Abdelwahab, Sherif, Bechir Hamdaoui, and Mohsen Guizani. "Cloud-Assisted Remote Sensor Network Virtualization for Distributed Consensus Estimation." arXiv preprint arXiv:1501.03547 (2015).
-%[5] Camps-Mur, D.; Garcia-Saavedra, A.; Serrano, P., "Device-to-device communications with Wi-Fi Direct: overview and experimentation," Wireless Communications, IEEE , vol.20, no.3, pp.96,104, June 2013.
-
-\bibitem{IEEEhowto:kopka}
-H.~Kopka and P.~W. Daly, \emph{A Guide to \LaTeX}, 3rd~ed.\hskip 1em plus
-  0.5em minus 0.4em\relax Harlow, England: Addison-Wesley, 1999.
+\bibitem{Atzori}
+L.~Atzori, A.~Iera, G.~Morabito, \emph{The Internet of Things: a survey},
+Comput. Netw. 54 (15) (2010) 2787--2805.
+\bibitem{Jayasumana}
+ A. P. Jayasumana, Q. Han, and T. H. Illangasekare, \textit{Virtual sensor networks - a resource effcient approach for concurrent applications,} in
+Proceedings of the International Conference on Information
+Technology (ITNG'07)
+. Washington, DC, USA: IEEE Computer Society, 2007, pp. 111--115.
+\bibitem{Chowdhury}
+ N. M. Kabir Chowdhury and R. Boutaba, \textit{A Survey of Network
+Virtualization,} Tech. Rep. CS-2008-25, University of Waterloo, Oct.
+2008.
+\bibitem{Sherif}
+A.~Sherif, B.~Hamdaoui, and M.~Guizani. \textit{Cloud-Assisted Remote Sensor Network Virtualization for Distributed Consensus Estimation.} arXiv preprint arXiv:1501.03547 (2015).
+\bibitem{Mur}
+ D. Camps-Mur, A. Garcia-Saavedra, and P. Serrano, \textit{Device to device communications with wifi direct: overview and
+experimentation,}
+IEEE Wireless Communications Magazine
+, vol.20, no.3, pp.96,104, June 2013.
 
 \end{thebibliography}
 
